# SfMHandEye

./: .gitignore  00000000_Resection.ply  00000001_Resection.ply  00000002_Resection.ply  00000003_Resection.ply  00000004_Resection.ply  00000005_Resection.ply  00000006_Resection.ply  00000007_Resection.ply  00000008_Resection.ply  00000009_Resection.ply  00000010_Resection.ply  00000011_Resection.ply  00000012_Resection.ply  CMakeLists.txt  Initialization.ply  README.md  Reconstruction_Report.html  SfMReconstruction_Report.html  cloud.ply  cloud2.ply  initialPair.ply  report.html  test.ply  test.txt
include/chessboardless/: SfMPlyHelper.hpp  bimap.hpp  calibration_data.hpp  feature_detection.hpp  feature_matching.hpp  features.hpp  geometry.hpp  graph.hpp  reconstruction.hpp  reprojection_cost_functions.hpp  vslam_graph.hpp
robot_scripts/: extrinsic_test.py  robot_capture.py
src/: calibration_data.cpp  feature_detection.cpp  feature_matching.cpp  features.cpp  geometry.cpp  graph.cpp  main.cpp  reconstruction.cpp
